--- a/WestWindMaintenence/WebApp/Site.Master
+++ b/WestWindMaintenence/WebApp/Site.Master
@@ -51,6 +51,8 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
+                        <li><a runat="server" href="~/Admin/ViewSuppliers.aspx">View Suppliers</a></li>
+                        <li><a runat="server" href="~/Admin/AddEditSupplier.aspx">Manage Suppliers</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                     </ul>
